--- a/webgl-app/src/App.css
+++ b/webgl-app/src/App.css
@@ -9,7 +9,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -20,6 +20,16 @@
 
 .App-link {
   color: #61dafb;
+}
+
+canvas {
+  display : block;
+  width : 280px;
+  height : 210px;
+  margin : auto;
+  padding : 0;
+  border : none;
+  background-color : black;
 }
 
 @keyframes App-logo-spin {
